objects/Site_Access__c/Site_Access__c.object-meta.xml
<CustomObject>
    <label>Site Access</label>
    <nameField>
        <displayFormat>SA-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>