objects/Site_Access__c/fields/Site_Page__c.field-meta.xml
<CustomField>
    <fullName>Site_Page__c</fullName>
    <label>Site Page</label>
    <length>80</length>
    <type>Text</type>
</CustomField>