objects/Site_Access__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>40</length>
    <type>Text</type>
</CustomField>